Update dark mode and fixed quiz calculations

--- a/app/src/pages/home/Home.module.css
+++ b/app/src/pages/home/Home.module.css
@@ -3,6 +3,7 @@
   position: relative;
   font-weight: 900;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: var(--title-font-size);
 }
 .pageLabel {
   cursor: pointer;
@@ -39,4 +40,8 @@
     min-height: 852px;
     max-height: 852px;
   }
+}
+.darkMode {
+	background-color: var(--background-color-dark); /* Use dark mode background color */
+	color: var(--text-color-dark); /* Use dark mode text color */
 }
